added another tile

--- a/etsy-app/src/app/app.component.html
+++ b/etsy-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="drawer-container">
+<mat-sidenav-container>
   <h1>Etsy Summary</h1>
-  <order-summary></order-summary>
+  <dashboard></dashboard>
 </mat-sidenav-container>
