added GR listings

--- a/etsy-app/src/app/app.component.html
+++ b/etsy-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container>
-  <h1>Etsy Summary</h1>
-  <dashboard></dashboard>
+<mat-sidenav-container color="primary">
+  <app-nav-bar></app-nav-bar>
+  <router-outlet></router-outlet>
 </mat-sidenav-container>
