--- a/etsy-app/src/app/components/empty-gr/empty-gr.component.html
+++ b/etsy-app/src/app/components/empty-gr/empty-gr.component.html
@@ -1,10 +1,9 @@
-<mat-card>
-  <mat-card-title>Listings with "GR"</mat-card-title>
-  <mat-card-content>
-  <mat-list>
+
+<mat-list>
     <mat-list-item *ngFor="let listing of listings">
-        <p mat-line> {{listing.title}} </p>
+      <img matListAvatar src={{listing.pic1}} >
+      <p matLine>
+        <span> {{listing.title}} </span>
+      </p>
     </mat-list-item>
   </mat-list>
-  </mat-card-content>
-</mat-card>
