--- a/etsy-app/src/styles.css
+++ b/etsy-app/src/styles.css
@@ -1,2 +1,58 @@
-/* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+html,
+body {
+	margin: 0;
+	font-family: 'Lato', sans-serif;
+	font-size: 100%;
+	height: 100%;
+}
+
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+::-webkit-scrollbar-track {
+	background: #F3F3F3;
+	background-clip: content-box; 
+}
+
+::-webkit-scrollbar-thumb {
+	height: 50%;
+	background: #757575;
+}
+
+
+.loading-container {
+	width: 100vw;
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background: #0f6dbe;
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	justify-content: center;
+	align-content: center;
+  }
+  
+  .flex {
+	min-height: 60pt;
+  }
+  
+  .loader {
+	width: 50pt;
+	height: 50pt;
+    margin-left: auto;
+	margin-right: auto;
+	background-color: transparent;
+  }
+  
+  .load-text {
+	padding-top: 15px;
+	text-align: center;
+	font: 2em 'Lato, sans-serif';
+	color: white;
+	}
+	
+	
+  
