--- a/etsy-app/src/app/components/all-order-summary/all-order-summary.component.html
+++ b/etsy-app/src/app/components/all-order-summary/all-order-summary.component.html
@@ -1,4 +1,5 @@
-<mat-card (click)="OnMatCardClickEvent()">
+<mat-card>
   <mat-card-title>Summary of All Orders</mat-card-title>
-  <mat-card-content>Total of {{orderSummary.numOrders}} orders for {{orderSummary.totalAmount | currency}} and shipping of {{orderSummary.totalShipping | currency}}</mat-card-content>
+  <mat-card-content>Total of {{orderSummary.numOrders}} orders for {{orderSummary.totalAmount | currency}} and
+    shipping of {{orderSummary.totalShipping | currency}}</mat-card-content>
 </mat-card>
