--- a/etsy-app/src/app/components/month-summary/month-summary.component.css
+++ b/etsy-app/src/app/components/month-summary/month-summary.component.css
@@ -22,3 +22,10 @@ th {
     flex: 0 0 10% !important;
     min-width: 90px !important;
 }
+
+.main-div{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
