--- a/etsy-app/src/app/components/state-summary/state-summary.component.css
+++ b/etsy-app/src/app/components/state-summary/state-summary.component.css
@@ -22,3 +22,9 @@ th {
     flex: 0 0 10% !important;
     min-width: 90px !important;
 }
+
+.main-div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
