--- a/etsy-app/src/app/components/month-summary/month-summary.component.html
+++ b/etsy-app/src/app/components/month-summary/month-summary.component.html
@@ -1,35 +1,27 @@
-<div class="main-div">
-    <mat-card>
-        <mat-card-title>Orders by Month</mat-card-title>
-        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
-            <ng-container matColumnDef="month">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Month </th>
-                <td mat-cell *matCellDef="let element"> {{element.state}} </td>
-            </ng-container>
+<div fxLayout="row" fxFlex.md="70" fxLayoutWrap class="card-deck-container mat-elevation-z4">
+    <div fxFlex *ngFor="let years of yearlySummary" class="card-item">
+        <mat-card [ngStyle]="{'width':'300' + 'px'}">
+            <mat-card-title> {{years.year}} Orders by Month</mat-card-title>
+            <mat-card-content>
+                <table>
+                    <thead>
+                        <th>Month</th>
+                        <th>Orders</th>
+                        <th>Total Amount</th>
+                        <th>Total Shipping</th>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let summary of years.summaries">
+                            <td>{{summary.state}}</td>
+                            <td>{{summary.numOrders}}</td>
+                            <td>{{summary.totalAmount | currency}}</td>
+                            <td>{{summary.totalShipping | currency}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </mat-card-content>
+        </mat-card>
+    </div>
 
-            <ng-container matColumnDef="numOrders">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Orders </th>
-                <td mat-cell *matCellDef="let element"> {{element.numOrders}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="totalAmount">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Sales </th>
-                <td mat-cell *matCellDef="let element"> {{element.totalAmount | currency}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="totalShipping">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Shipping </th>
-                <td mat-cell *matCellDef="let element"> {{element.totalShipping | currency}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="totalTax">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Tax </th>
-                <td mat-cell *matCellDef="let element"> {{element.totalTax | currency}} </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-    </mat-card>
 </div>
